WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61438
[Qt] fast/css/disabled-author-styles.html failed
https://bugs.webkit.org/show_bug.cgi?id=61438
Summary
[Qt] fast/css/disabled-author-styles.html failed
qi
Reported
2011-05-25 08:08:02 PDT
LayoutTestControllerQt doesn't implement setAuthorAndUserStylesEnabled.
Attachments
patch
(15.58 KB, patch)
2011-05-25 08:13 PDT
,
qi
no flags
Details
Formatted Diff
Diff
patch2
(15.49 KB, patch)
2011-05-25 08:20 PDT
,
qi
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
qi
Comment 1
2011-05-25 08:13:32 PDT
Created
attachment 94784
[details]
patch
WebKit Review Bot
Comment 2
2011-05-25 08:17:02 PDT
Attachment 94784
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/plat..." exit_code: 1 Tools/DumpRenderTree/qt/LayoutTestControllerQt.h:172: The parameter name "enable" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
qi
Comment 3
2011-05-25 08:20:16 PDT
Created
attachment 94785
[details]
patch2 fix style issue.
Andreas Kling
Comment 4
2011-05-25 10:40:54 PDT
Comment on
attachment 94785
[details]
patch2 LGTM!
WebKit Commit Bot
Comment 5
2011-05-25 12:20:41 PDT
Comment on
attachment 94785
[details]
patch2 Clearing flags on attachment: 94785 Committed
r87311
: <
http://trac.webkit.org/changeset/87311
>
WebKit Commit Bot
Comment 6
2011-05-25 12:20:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug