2011-05-25  Qi Zhang  <qi.2.zhang@nokia.com>

Reviewed by Andreas Kling.

        [Qt] fast/css/disabled-author-styles.html failed
        https://bugs.webkit.org/show_bug.cgi?id=61438

        Unskip test case and provide expect result files.

        * platform/qt/Skipped:
        * platform/qt/fast/css/disabled-author-styles-expected.png: Added.
        * platform/qt/fast/css/disabled-author-styles-expected.txt: Added.
2011-05-25  Qi Zhang  <qi.2.zhang@nokia.com>

        Reviewed by Andreas Kling.

        [Qt] fast/css/disabled-author-styles.html failed
        https://bugs.webkit.org/show_bug.cgi?id=61438

        Provided API setAuthorAndUserStylesEnabled for DumpRenderTree.

        * WebCoreSupport/DumpRenderTreeSupportQt.cpp:
        (DumpRenderTreeSupportQt::setAuthorAndUserStylesEnabled):
        * WebCoreSupport/DumpRenderTreeSupportQt.h:
2011-05-25  Qi Zhang  <qi.2.zhang@nokia.com>

        Reviewed by Andreas Kling.

        [Qt] fast/css/disabled-author-styles.html failed
        https://bugs.webkit.org/show_bug.cgi?id=61438

        Implemented API setAuthorAndUserStylesEnabled in LayoutTestControllerQt.

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::WebPage::resetSettings):
        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::setAuthorAndUserStylesEnabled):
        * DumpRenderTree/qt/LayoutTestControllerQt.h:

Canonical link: https://commits.webkit.org/76862@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87311 268f45cc-cd09-0410-ab3c-d52691b4dbfc