Source/WebKit/qt/WebCoreSupport/DumpRenderTreeSupportQt.h
@@ -105,6 +105,7 @@ public:
     static void setDomainRelaxationForbiddenForURLScheme(bool forbidden, const QString& scheme);
     static void setFrameFlatteningEnabled(QWebPage*, bool);
     static void setCaretBrowsingEnabled(QWebPage* page, bool value);
+    static void setAuthorAndUserStylesEnabled(QWebPage*, bool);
     static void setMediaType(QWebFrame* qframe, const QString& type);
     static void setDumpRenderTreeModeEnabled(bool b);
 
