Tools/DumpRenderTree/qt/DumpRenderTreeQt.cpp
@@ -197,6 +197,7 @@ void WebPage::resetSettings()
     settings()->resetAttribute(QWebSettings::ZoomTextOnly);
 
     m_drt->layoutTestController()->setCaretBrowsingEnabled(false);
+    m_drt->layoutTestController()->setAuthorAndUserStylesEnabled(true);
     m_drt->layoutTestController()->setFrameFlatteningEnabled(false);
     m_drt->layoutTestController()->setSmartInsertDeleteEnabled(true);
     m_drt->layoutTestController()->setSelectTrailingWhitespaceEnabled(false);
